--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "atsp_utility",
   "short_name": "atsp_util",
-  "version": "1.1.1",
+  "version": "1.0.1",
   "manifest_version": 2,
   "description": "ERPパッケージ製品サポートサイト @support にてサポート対応者の利用を想定した便利機能です。",
   "icons": {
@@ -14,7 +14,7 @@
        ,"open_in_tab": true
   },
   "permissions": [
-    "storage"
+    "storage","activeTab","https://support.worksap.co.jp/collaboInsMessage.do*","https://support.worksap.com/collaboInsMessage.do*"
   ],
   "background": {
     "scripts": ["scripts/background.js"]
